css/main.css
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

body{
    background: url("../img/bg.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: 100% 100%;

    overflow: hidden;
}
ul {
    padding: 0;
    list-style-type: none;
}
div.container {
    max-width: 1000px;
}
a{
    text-decoration: none;
}
a:hover{
    text-decoration: none;
}

.overlay {
    display: none;
    position: fixed;
    background-color: white;
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    opacity: .3;
}

.blueOverlay {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: darkblue;
    opacity: .3;
}

#mainNav{
    position: absolute;
    width: 100%;
    height: 20px;
    background-color: black;
    opacity: 0.8;
    color: white;

}
.mainNavText{
    position: absolute;
    text-align: center;
    width: 160px;
    margin-left: 50%;
    left: -80px;

}
#clock{
    position: absolute;
    text-align: right;
    margin-right: 10px;
    right: 5px;
    top: 1px;

}

/* icon positions */
#terminalBox { top: 60px; }
#resumeBox   { top: 120px; }
#emailBox  { top: 180px; }
#phoneBox { top: 240px; }

#resumeContent{
    display: none;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 26px;
}
#phoneContent{
    display: none;
    position: absolute;
    top: 26px;
    width: 100%;
    height: 204px;
    font-size: 16px;
    color: black;
    padding: 20px;
}
#emailContent{
    display: none;
    position: absolute;
    top: 26px;
    width: 100%;
    height: 204px;
    font-size: 16px;
    color: black;
    padding: 20px;
}
.terminalText{
    font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
    font-size: 14px;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 20px;
}



.navBarSmall {
    position: absolute;
    background-color: #222222;
    width: 100%;
    height: 26px;
    display: none;


    background: rgba(156,156,156,1);
    background: -moz-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(61,61,61,1) 100%);
    background: -webkit-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(61,61,61,1) 100%);
    background: -o-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(61,61,61,1) 100%);
    background: -ms-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(61,61,61,1) 100%);
    background: linear-gradient(to bottom, rgba(156,156,156,1) 0%, rgba(61,61,61,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9c9c9c', endColorstr='#3d3d3d', GradientType=0 );


    border-radius: 5px 5px 0px 0px;
    -moz-border-radius: 5px 5px 0px 0px;
    -webkit-border-radius: 5px 5px 0px 0px;
}

#iconSideBar {
    opacity: 0;
    position: fixed;
    background-color: black;
    height: 100%;
    width: 90px;
    top: 0;
    left: 0;

    background: rgba(0,0,0,0.8);
    background: -moz-linear-gradient(left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.75) 25%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0) 100%);
    background: -webkit-linear-gradient(left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.75) 25%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0) 100%);
    background: -o-linear-gradient(left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.75) 25%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0) 100%);
    background: -ms-linear-gradient(left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.75) 25%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0) 100%);
    background: linear-gradient(to right, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.75) 25%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
}



#terminalContent {
    display: none;
    position: absolute;
    top: 28px;
    width: 100%;
    height: 93%;
}
#terminalInput {
    outline: none;
    position: relative;
    border: none;
    color: white;
    width: 80%;
    background-color: transparent;
}


#mainContent {
    position: absolute;
    background-color: white;
    width: 100%;
    height: 70px;
    bottom: 0;
    left: 0;
    margin-bottom: 0;
    padding-right:10%;
    padding-left:10%;

}


.smallShadow {
    -webkit-box-shadow: 0 0 10px 0 rgba(113, 113, 113, 0.75);
    -moz-box-shadow: 0 0 10px 0 rgba(113, 113, 113, 0.75);
    box-shadow: 0 0 10px 0 rgba(113, 113, 113, 0.75);
}
.transparent {
    opacity: 0.5;
}



.scrollButton {
    position: relative;
    background-color: black;
    width: 60px;
    height: 60px;
    left: 50%;
    top: 5px;
    margin-left: -30px;
    border-radius: 60px 60px 60px 60px;
    -moz-border-radius: 60px 60px 60px 60px;
    -webkit-border-radius: 60px 60px 60px 60px;
}
.upArrow { background: url("../img/buttons/upArrowButton.png") no-repeat; }
.upArrow:hover { background: url("../img/buttons/upArrowButton_hover.png") no-repeat;+ }
.upArrow:active { background: url("../img/buttons/upArrowButton_active.png") no-repeat;+ }

.downArrow {
    background: url("../img/buttons/downArrowButton.png") no-repeat;
}
.downArrow:hover { background: url("../img/buttons/downArrowButton_hover.png") no-repeat;+ }
.downArrow:active { background: url("../img/buttons/downArrowButton_active.png") no-repeat;+ }
/* ... */

